# Abitur-Song-Uploader

./: .env.example  .gitignore  Dockerfile  README.md  deploy.sh  django_setup.sh  docker-compose.yml  entrypoint.sh  pyproject.toml  requirements-dev.txt  requirements.txt
.docker/: my.conf
.github/workflows/: deploy.yml
ansible/: .gitignore  ansible.cfg  hosts  site.yml  vault.yml
ansible/group_vars/: all
deploy/scripts/: deploy.sh  django_setup.sh
src/: manage.py  requirements-dev.txt  requirements.txt
src/config/gunicorn/: dev.py
src/django_helpers/: README.md  apps.py
src/imageupload/: admin.py  forms.py  models.py  urls.py  views.py
src/imageupload/migrations/: 0001_initial.py  0001_initial_squashed_0004_userimage_height_userimage_width_and_more.py  0002_alter_userimage_changed_at_and_more.py  0003_alter_userimage_image.py  0004_userimage_height_userimage_width_and_more.py  0005_profile_alter_userimage_height_alter_userimage_image_and_more.py  0006_remove_userimage_description.py  0007_profile_user_alter_profile_abi_learned_and_more.py
src/polls/: admin.py  filters.py  forms.py  models.py  urls.py  utils.py  views.py
src/polls/migrations/: 0001_initial.py  0002_answer_answer_value_id_answer_content_type.py  0003_question_max_answers.py  0005_alter_poll_end_date.py  (+8 more)
src/songuploader/: asgi.py  context_processors.py  logs.py  urls.py  utils.py  views.py  wsgi.py
src/theme/: package-lock.json  package.json  utils.py
src/uploader/: apps.py  forms.py  models.py  urls.py  views.py
src/voting/: admin.py  forms.py  models.py  urls.py  views.py
(+155 files in other folders)
