[tool.poetry]
name = "song-uploader"
version = "0.1.0"
description = ""
authors = ["Simon Felix Seeger <simon.f.seeger@gmx.de>"]
readme = "README.md"
packages = [{include = "song_uploader"}]

[tool.poetry.dependencies]
python = "^3.10"
Django = "^4.1.7"
django-q = "^1.3.9"
python-dotenv = "^1.0.0"
mysqlclient = "^2.1.1"

[tool.poetry.group.dev.dependencies]
pylance = "^0.3.10"
black = "^23.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
