[tool.poetry]
name = "song-uploader"
version = "0.1.0"
description = ""
authors = ["Simon Felix Seeger <simon.f.seeger@gmx.de>"]
readme = "README.md"
packages = [{include = "song_uploader"}]

[tool.poetry.dependencies]
python = "^3.10"
Django = "^4.1.7"
django-q = "^1.3.9"
python-dotenv = "^1.0.0"
mysqlclient = "^2.1.1"
django-crispy-forms = "^2.0"
crispy-bulma = "0.9.0"
debugpy = "^1.6.6"
requests = "^2.28.2"
gunicorn = "^20.1.0"
pandas = "^1.5.3"
tqdm = "^4.65.0"
ansible = "^7.3.0"
django-prometheus = "^2.2.0"
django-extensions = "^3.2.1"
pytube = {git = "https://github.com/julySteuer/pytube", rev = "master"}
django-cleanup = "^7.0.0"
django-dbbackup = "^4.0.2"

[tool.poetry.group.dev.dependencies]
pylance = "^0.3.10"
black = "^23.1.0"
pylint-django = "^2.5.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
